fix: overlay wide spacings

--- a/src/es/components/molecules/dialog/left-slide-in-wide-/left-slide-in-wide-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-wide-/left-slide-in-wide-.css
@@ -57,13 +57,6 @@
   }
 }
 
-@media only screen and (max-width: _max-width_) {
-  :host .container #close {
-    position: relative;
-    right: 0;
-  }
-}
-
 .container {
   align-items: center;
   display: flex;
@@ -125,7 +118,7 @@
   padding: 0;
   position: relative;
   z-index: 1;
-  padding: var(--mdx-sys-spacing-flex-large-xs) var(--mdx-sys-spacing-flex-large-xs) var(--mdx-sys-spacing-flex-large-l);
+  padding: var(--mdx-sys-spacing-flex-xs) var(--mdx-sys-spacing-flex-xs) var(--mdx-sys-spacing-flex-xs);
 }
 
 /* iOS specific styles */
@@ -141,9 +134,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-  gap: calc(32rem/18);
-  padding: 0 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
   width: 100%;
 }
 
@@ -158,7 +149,7 @@
   border-top: 1px solid var(--color-gray-300, rgba(224, 224, 224, 1));
   align-items: stretch;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   position: sticky;
   bottom: 0;
   z-index: 2;
@@ -176,4 +167,31 @@
   margin-right: 0.25rem;
   position: relative;
   top: 0.2rem;
+}
+
+:host .success {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+:host .success a-icon-mdx {
+  color: var(--mdx-base-color-klubschule-green-600);
+}
+
+.success p {
+  color: var(--mdx-sys-color-neutral–default);
+  font: var(--mdx-sys-font-flex-body2)
+}
+
+@media only screen and (max-width: _max-width_) {
+  :host .container #close {
+    position: relative;
+    right: 0;
+  }
+
+  :host .dialog-content .sub-content {
+    padding: 0;
+    margin-bottom: 9.375rem;
+  }
 }
